@@ -9,11 +9,26 @@
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
 		<java-version>1.6</java-version>
-		<org.springframework-version>3.1.1.RELEASE</org.springframework-version>
+		<!-- Version Changed : 3.1.1.RELEASE >> 5.1.5.RELEASE -->
+		<!-- 
+			Because of Warning
+			WARNING: An illegal reflective access operation has occurred
+			WARNING: Illegal reflective access by net.sf.cglib.core.ReflectUtils$2 (file:/C:/Users/User/.m2/repository/cglib/cglib/2.2.2/cglib-2.2.2.jar) to method java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int,java.security.ProtectionDomain)
+			WARNING: Please consider reporting this to the maintainers of net.sf.cglib.core.ReflectUtils$2
+			WARNING: Use - - illegal-access=warn to enable warnings of further illegal reflective access operations
+			WARNING: All illegal access operations will be denied in a future release
+		 -->
+		<org.springframework-version>5.1.5.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
 	<dependencies>
+		<!-- CGLIB -->
+		<dependency>
+  			<groupId>cglib</groupId>
+    		<artifactId>cglib</artifactId>
+  			<version>2.2.2</version>
+		</dependency>
 		<!-- JSTL -->
 		<dependency>
    			<groupId>jstl</groupId>
@@ -125,6 +140,29 @@
 	</dependencies>
     <build>
         <plugins>
+        	<!-- surefire, failsafe  -->    
+        	<!-- Exception throw -->    	
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>2.22.0</version>
+			    <configuration>
+			        <argLine>
+			            --illegal-access=permit
+			        </argLine>
+			    </configuration>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-failsafe-plugin</artifactId>
+			    <version>2.22.0</version>
+			    <configuration>
+			        <argLine>
+			            --illegal-access=permit
+			        </argLine>
+			    </configuration>
+			</plugin>
+			<!-- End of Insert -->
             <plugin>
                 <artifactId>maven-eclipse-plugin</artifactId>
                 <version>2.9</version>
